<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.mark.ireportmaininterface.CreateAccount">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/username"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preferred_username"
        android:id="@+id/hlo"
        android:layout_toStartOf="@+id/username"
        android:layout_above="@+id/password" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_below="@+id/username"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preferred_password"
        android:id="@+id/textView2"
        android:layout_alignBottom="@+id/password"
        android:layout_toStartOf="@+id/password" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/confirmpass"
        android:inputType="textPassword"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:id="@+id/textView3"
        android:layout_toStartOf="@+id/confirmpass"
        android:layout_alignBottom="@+id/confirmpass" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/btnSubmit"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Back"
        android:id="@+id/btnBack"
        android:layout_alignBottom="@+id/btnSubmit"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/lblError"
        android:layout_above="@+id/btnSubmit"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/emailadd"
        android:layout_above="@+id/username"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_add"
        android:id="@+id/textView4"
        android:layout_alignBottom="@+id/emailadd"
        android:layout_toStartOf="@+id/emailadd" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Gender"
        android:id="@+id/textView5"
        android:layout_alignBottom="@+id/radioButton"
        android:layout_toStartOf="@+id/emailadd" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/male"
        android:id="@+id/radioButton"
        android:layout_above="@+id/emailadd"
        android:layout_alignStart="@+id/emailadd" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/female"
        android:id="@+id/radioButton2"
        android:layout_alignTop="@+id/radioButton"
        android:layout_alignStart="@+id/lblError" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_above="@+id/radioButton"
        android:layout_centerHorizontal="true"
        android:ems="10"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Location"
        android:id="@+id/textView6"
        android:layout_toStartOf="@+id/editText"
        android:layout_above="@+id/radioButton"
        android:layout_alignEnd="@+id/textView5" />
</RelativeLayout>
