<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.mark.ireportmaininterface.LoginMenu">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/username"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />
d
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password"
            android:layout_below="@+id/username"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:id="@+id/lblUserName"
            android:layout_toStartOf="@+id/username"
            android:layout_above="@+id/password" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Password"
            android:id="@+id/lblPassword"
            android:layout_toStartOf="@+id/password"
            android:layout_alignBottom="@+id/password" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/infoDisplay"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:ems="5"
            android:textStyle="bold"
            android:textSize="20dp"
            android:id="@+id/login"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:id="@+id/register"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_toEndOf="@+id/lblPassword"
            android:layout_below="@+id/password"
            android:layout_toStartOf="@+id/login"
            android:layout_alignEnd="@+id/password" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="myReports"
            android:textAlignment="center"
            android:textSize="20dp"
            android:id="@+id/hlo"
            android:layout_toStartOf="@+id/login"
            android:singleLine="false"
            android:layout_marginBottom="75dp"
            android:layout_above="@+id/username"
            android:layout_alignStart="@+id/username"
            android:layout_alignEnd="@+id/infoDisplay" />
    </RelativeLayout>
</RelativeLayout>
